--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     ],
     "require": {
         "php": "^7.0",
-        "illuminate/support": "^5.3.*",
+        "illuminate/support": "^5.3",
         "tttptd/mdash": "dev-master"
     },
     "autoload": {
