--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Yu Shi",
-            "email": "mynsa04@ya.ru"
+            "name": "雨師",
+            "email": "tttptd@yandex.com"
         }
     ],
     "require": {
